fix state and img wrong size

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ button {
 img {
   width: 100px;
   height: 100px;
+  object-fit: contain
 }
 
 span {
